# CredLink

./: .checkov.yml  .dockerignore  .env.consolidated.example  .env.example  .env.production  .env.security.example  .env.template  .eslintrc.js  .eslintrc.json  .gitignore  .gitleaks.toml  .npmrc  .pre-commit-config.yaml  .trivyignore  .windsurfrules  ALL-ISSUES-COMPLETE.md  APOLOGY.md  ARCHITECTURE.md  ATOMIC_REMEDIATION_COMPLETE.md  ATOMIC_STEP_0_0_STATE_FINGERPRINTING.md  ATOMIC_STEP_0_1_DEPENDENCY_GRAPH.md  ATOMIC_STEP_0_2_RUNTIME_BEHAVIOR.md  ATOMIC_STEP_0_3_PERFORMANCE_BASELINE.md  ATOMIC_STEP_0_4_EXTERNAL_CONTRACTS.md  ATOMIC_STEP_0_5_OBSERVABILITY.md  BRANCHING_STRATEGY.md  CHANGELOG.md  CI_CD_SECURITY_ASSESSMENT.md  CODEBASE-OVERVIEW.md  COMMERCIAL-ROADMAP.md  CONTRIBUTING.md  CREDLINK-COMPREHENSIVE-AUDIT.md  CREDLINK-SIMPLE-EXPLANATIONS.md  CREDLINK-TECHNICAL-HOW-IT-WORKS.md  DEFECTS-FIXED-SUMMARY.md  DELIVERABLE-1-REPOSITORY-OVERVIEW-COMPLETE.md  DELIVERABLE-2-FILE-INVENTORY-COMPLETE.md  DELIVERABLE-3-END-TO-END-BEHAVIOR.md  DELIVERABLE-4-ALL-DEFECTS-COMPLETE.md  DELIVERABLE-4-DEFECTS-FIXED.md  (+136 more)
c2-concierge/gauntlet/src/autofallback/retro-sign/: .eslintrc.js  Cargo.toml  Dockerfile  LICENSE  SECURITY_AUDIT_PACKAGE.md  SECURITY_CHECKLIST.md  docker-compose.prod.yml  jest.config.js  jest.setup.js  package.json  tsconfig.json
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/: .env.example  .eslintrc.js  Dockerfile  README.md  SECURITY_AUDIT.md  docker-compose.yml  jest.config.js  package.json  security-audit.md  tsconfig.json
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/.github/workflows/: fuzzing.yml
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/security/fuzz/: Cargo.toml  fuzz_config.yaml
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/security/runners/: run_attacks.ts  run_fuzz.ts  run_parity.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/security/stabilization/: stabilization_config.yaml
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/src/: index.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/src/alerts/: alert-service.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/src/config/: index.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/src/db/: clickhouse.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/src/middleware/: security.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/src/queries/: slo-queries.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/src/schema/: clickhouse-ddl.sql
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/src/scripts/: create-schema.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/analytics/src/tests/: setup.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/api/: .env.example  package.json
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/api/src/: index.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/keyctl/src/: incident_engine.rs  lib.rs  main.rs  rep_generator.rs  rotation_engine.rs
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/keyctl/tests/: rotation_engine.rs
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/signer-hsm/config/: signer-hsm.toml
c2-concierge/gauntlet/src/autofallback/retro-sign/apps/signer-hsm/src/: main.rs
c2-concierge/gauntlet/src/autofallback/retro-sign/config/grafana/dashboards/: c2c-overview.json
c2-concierge/gauntlet/src/autofallback/retro-sign/deploy/: Dockerfile
c2-concierge/gauntlet/src/autofallback/retro-sign/docs/: README.md
c2-concierge/gauntlet/src/autofallback/retro-sign/docs/custody/: aws-kms-policy.json  policy-example.json  vault-hsm-policy.json  yubihsm2-policy.json
c2-concierge/gauntlet/src/autofallback/retro-sign/docs/demos/audio/: index.html
c2-concierge/gauntlet/src/autofallback/retro-sign/docs/demos/trust/: index.html
c2-concierge/gauntlet/src/autofallback/retro-sign/scripts/: deploy-production.sh  deploy.sh
c2-concierge/gauntlet/src/autofallback/retro-sign/sql/: 002_audit_events.sql
c2-concierge/gauntlet/src/autofallback/retro-sign/src/: alerting.rs  checkpoint.rs  circuit_breaker.rs  cli.rs  config.rs  ledger.rs  main.rs  migrations.rs  sampling.rs  signer.rs  storage.rs  validation.rs  verification.rs
c2-concierge/gauntlet/src/autofallback/retro-sign/src/performance/: cache.rs  metrics.rs  optimizer.rs  tests.rs
c2-concierge/gauntlet/src/autofallback/retro-sign/src/security/: audit.rs  authentication.rs  encryption.rs  mod.rs
c2-concierge/gauntlet/src/autofallback/retro-sign/tests/: integration.rs  integration.test.ts
c2-concierge/gauntlet/src/autofallback/retro-sign/tests/integration/: key_lifecycle.rs  mod.rs  rotation_workflows.rs
c2-concierge/gauntlet/src/autofallback/retro-sign/tests/production/: mod.rs
offline-kit/: Cargo.toml  FINAL-VERIFICATION-COMPLETE.md  PHASE-23-IMPLEMENTATION-COMPLETE.md  README.md  SECURITY-AUDIT-COMPLETE.md
offline-kit/assets/: report-styles.css
offline-kit/badge-offline/: app.js  index.html  styles.css
offline-kit/docs/: how-to-verify-offline.md
offline-kit/scripts/: build-cross-platform.sh  create-trustpack.sh  generate-samples.sh
offline-kit/src/: cli.rs  crypto.rs  lib.rs  main.rs  reports.rs  timestamp.rs  trust.rs  verification.rs
offline-kit/tests/: acceptance-tests.sh
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/src/c2concierge/: __init__.py  client.py  transport.py  types.py
sdk/python/src/credlink/: __init__.py  client.py  transport.py  types.py
sdk/python/tests/: test_client.py
tests/gauntlet/src/autofallback/retro-sign/apps/keyctl/: Cargo.toml
tests/gauntlet/src/autofallback/retro-sign/apps/keyctl/src/: rotation_scheduler.rs
tests/gauntlet/src/autofallback/retro-sign/apps/signer-hsm/: Cargo.toml
tests/gauntlet/src/autofallback/retro-sign/apps/signer-hsm/src/: aws_kms.rs  lib.rs
tests/gauntlet/src/autofallback/retro-sign/apps/signer-hsm/tests/: hsm_integration.rs
(+6608 files in other folders)
