[package]
name = "c2c-offline"
version = "1.0.0"
edition = "2021"
description = "C2 Concierge Offline Verification Kit CLI"
authors = ["C2 Concierge Team"]
license = "MIT"
repository = "https://github.com/Nickiller04/credlink"

[[bin]]
name = "c2c-offline"
path = "src/main.rs"

[dependencies]
# C2PA core with file I/O only (no network)
c2pa = { version = "0.6.0", features = ["file_io", "rust_native_crypto"], default-features = false }
c2pa-core = "0.6.0"

# Cryptographic operations
ring = "0.17"
p256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2.0"
x509-parser = "0.15"

# Archive handling for trustpacks
tar = "0.4"
zstd = "0.13"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Timestamp verification
openssl = { version = "0.10", features = ["vendored"] }

# CLI and output
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# QR code generation
qrcode = "0.14"
base64 = "0.21"
image = "0.24"

# HTML report generation
maud = "0.25"
chrono = { version = "0.4", features = ["serde"] }

# File operations
tempfile = "3.8"
sha2 = "0.10"
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3
