[package]
name = "keyctl"
version = "0.1.0"
edition = "2021"
authors = ["CredLink Inc."]
description = "Key custody control plane for C2 Concierge"

[lib]
name = "keyctl"
path = "src/lib.rs"

[[bin]]
name = "keyctl"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client/server
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database for policies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# PDF generation for REP
lopdf = "0.32"

# Cryptography
ring = "0.17"
sha2 = "0.10"
hex = "0.4"

# File operations
tokio-fs = "0.1"
zip = "0.6"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Metrics
prometheus = "0.13"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
