[package]
name = "signer-hsm"
version = "0.1.0"
edition = "2021"
authors = ["CredLink Inc."]
description = "HSM/KMS signing backend for C2 Concierge"

[lib]
name = "signer_hsm"
path = "src/lib.rs"

[[bin]]
name = "signer-hsm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client/server
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ring = "0.17"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# HSM/PKCS#11
pkcs11 = "0.5"
libloading = "0.8"

# Vault integration
vaultrs = "0.7"

# AWS KMS
aws-config = "1.1"
aws-sdk-kms = "1.3"
aws-types = "1.0"
aws-sdk-sts = "1.0"

# GCP KMS
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }

# ASN.1 handling
yasna = "0.5"
simple-asn1 = "0.6"

# Text wrapping for PEM
textwrap = "0.16"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Metrics
prometheus = "0.13"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
