[package]
name = "c2pa-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
c2pa = "0.6"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "c2pa_reader"
path = "fuzz_targets/c2pa_reader.rs"
